# easyocr_test

./: .gitignore  .rsync-exclude  01_test_the_results_models.ipynb  01_test_the_results_models.py  02_generate_charts.py  02_test_from_file.ipynb  03_visualize_from_file.py  04_presentations_runner.py  Makefile  analyze_negative_accuracy.py  convert_txt_to_csv.py  generate_charts.py  individual_metrics_realtime.json  log_analysis.ipynb  main.ipynb  main.py  model_val_test.py  pyproject.toml
.ipynb_checkpoints/: 01_test_the_results_models-checkpoint.ipynb
examples/: 01_presentation_basic_results_no_color.py  02_presentation_performance_summary_no_color.py  03_presentation_error_analysis_no_color.py  04_presentation_comparison_table.py  05_presentation_summary_no_color.py  README_PRESENTATION.md
output/save/: graph.ipynb  out_source_merge_kaggle.csv  out_source_merge_kaggle_data_freeze_sequence_config.csv  out_source_only.csv
scripts/: generate_charts.py  test_from_file.ipynb
utils/: config.py  dataset_loader.py  gpu_config.py  gpu_optimizer.py  metrics.py  metrics_backup.py  ocr_comparator.py  ocr_data_models.py  ocr_evaluator.py
