[project]
name = "easyocr-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.7"
dependencies = [
    "colorama>=0.4.6",
    "colored>=2.3.0",
    "easydict>=1.13",
    "easyocr>=1.7.2",
    "fire>=0.7.0",
    "imgaug>=0.4.0",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "lmdb>=1.6.2",
    "matplotlib>=3.10.3",
    "natsort>=8.4.0",
    "nltk>=3.9.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pythainlp>=5.1.2",
    "python-levenshtein>=0.27.1",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]
